# SWIG-test

source/: CMakeLists.txt  ObjectA.cpp  ObjectA.hpp  ObjectB.cpp  ObjectB.hpp  python.i
